--- a/blog/dapper-blog-mongodb/package.json
+++ b/blog/dapper-blog-mongodb/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dapper-blogs",
+  "name": "dapper-blog-mongodb",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.5",
+    "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.29",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.0",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "typescript": "4.6.3"
+    "eslint-config-next": "12.1.6"
   }
 }
