--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-scripts": "^5.0.1",
     "react-visibility-sensor": "^5.1.1",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "iframe-resizer-react": "^1.1.0",
+    "emailjs-com": "^2.6.4"
     
   },
   "scripts": {
